--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Welcome.cshtml\Controllers\" />
+    <Folder Include="Areas\Welcome.cshtml\Data\" />
+    <Folder Include="Areas\Welcome.cshtml\Models\" />
+    <Folder Include="Areas\Welcome.cshtml\Views\" />
+    <Folder Include="Views\Новая папка\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
